css/style.css
:root {
  /* Colors */
  --main-color: #2196f3;
  --main-color-alt: #1787e0;
  --main-box-shadow: 0 0 0.625rem #ddd;
  --light-font-color: #666;
  /* Dimensions */
  --section-padding: 6.25rem;
  /* Transitions */
  --main-transition: 0.3s;
}

/** ==================== GLOBAL RULES ==================== */
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}
*::before {
  box-sizing: border-box;
}
*::after {
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}
body {
  font-family: "Cairo", sans-serif;
}
ul {
  list-style: none;
}
a {
  text-decoration: none;
}
svg {
  width: 24px;
}
.container {
  margin-left: auto;
  margin-right: auto;
  padding-left: 0.9375rem;
  padding-right: 0.9375rem;
}
@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}
@media (min-width: 992px) {
  .container {
    width: 970px;
  }
}
@media (min-width: 1200px) {
  .container {
    width: 1170px;
  }
}

/** ==================== COMPONENTS ==================== */
.section {
  padding-top: var(--section-padding);
  padding-bottom: var(--section-padding);
}

/** ==================== ANIMATION ==================== */
@keyframes up-and-down {
  100% {
    transform: translateY(-3.125rem);
  }
}
@keyframes bouncing {
  0%,
  10%,
  20%,
  50%,
  80%,
  100% {
    transform: translateY(0);
  }
  40%,
  60% {
    transform: translateY(-0.9375rem);
  }
}

/** ==================== HEADER ==================== */
header {
  box-shadow: var(--main-box-shadow);
  background-color: white;
}
header .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  position: relative;
}
@media (max-width: 767px) {
  header .container {
    justify-content: center;
  }
}
header .logo,
header .main-nav > li > a {
  height: 4.5rem;
}
header .logo {
  font-size: 1.625rem;
  text-decoration: none;
  font-weight: bold;
  color: var(--main-color);
  /* Maintains consistent header height regardless of content */
  display: flex;
  justify-content: center;
  align-items: center;
}
@media (max-width: 767px) {
  header .logo {
    width: 100%;
  }
}
header .main-nav {
  display: flex;
}
header .main-nav > li > a {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 1.875rem;
  font-size: 1.125rem;
  transition: var(--main-transition);
  color: black;
  position: relative;
  overflow: hidden;
}
@media (max-width: 767px) {
  header .main-nav > li > a {
    font-size: 1rem;
    padding: 1.25rem 0.625rem;
    height: 2.5rem;
  }
}
header .main-nav > li > a::before {
  content: "";
  position: absolute;
  height: 5px;
  width: 100%;
  left: -100%;
  top: 0;
  background-color: var(--main-color);
  transition: var(--main-transition);
}
header .main-nav > li > a:hover {
  background-color: #fafafa;
  color: var(--main-color);
}
header .main-nav > li > a:hover::before {
  left: 0;
}

/** ==================== LANDING ==================== */
.landing {
  position: relative;
}
.landing::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #ececec;
  left: 0;
  top: -2.5rem;
  z-index: -1;
  transform: skewY(-6deg);
  transform-origin: top left;
}
.landing .container {
  height: calc(100vh - 4.5rem);
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  padding-bottom: 7.5rem;
}
.landing .text {
  flex: 1;
}
@media (max-width: 991px) {
  .landing .text {
    text-align: center;
  }
}
.landing .text h1 {
  font-size: 2.5rem;
  margin: 0;
  letter-spacing: -2px;
}
@media (max-width: 991px) {
  .landing .text h1 {
    font-size: 2.1875rem;
    padding-bottom: 1.25rem;
  }
}
.landing .text p {
  font-size: 1.4375rem;
  line-height: 1.7;
  margin: 0.3125rem 0 0;
  color: var(--light-font-color);
  max-width: 31.25rem;
}
.landing .image img {
  width: 37.5rem;
  max-width: 100%;
  animation: up-and-down 2.2s linear infinite alternate;
}
@media (max-width: 991px) {
  .landing .image img {
    display: none;
  }
}
.landing > .go-down {
  position: absolute;
  bottom: 1.875rem;
  left: 50%;
  transform: translateX(-50%);
  transition: var(--main-transition);
  animation: bouncing 1.5s infinite;
}
@media (max-width: 767px) {
  .landing > .go-down {
    bottom: 6.25rem;
  }
}
.landing > .go-down:hover svg {
  color: var(--main-color-alt);
}
.landing > .go-down svg {
  width: 2.3125rem;
  color: var(--main-color);
}

